--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2>Interactive 3D Models</h2>
             <!-- Tulsi -->
             <div id="tulsi" class="model-container">
-                <model-viewer src="models/tulsi.glb" alt="Tulsi" auto-rotate camera-controls></model-viewer>
+                <model-viewer src="tulsi.glb" alt="Tulsi" auto-rotate camera-controls></model-viewer>
                 <div class="plant-info">
                     <h3>Tulsi (Ocimum sanctum)</h3>
                     <p><strong>Common Names:</strong> Holy Basil, Sacred Basil</p>
@@ -55,7 +55,7 @@
 
             <!-- Ashwagandha -->
             <div id="ashwagandha" class="model-container">
-                <model-viewer src="models/Ahwagandha.glb" alt="Ashwagandha" auto-rotate camera-controls></model-viewer>
+                <model-viewer src="Ahwagandha.glb" alt="Ashwagandha" auto-rotate camera-controls></model-viewer>
                 <div class="plant-info">
                     <h3>Ashwagandha (Withania somnifera)</h3>
                     <p><strong>Common Names:</strong> Indian Ginseng, Winter Cherry</p>
@@ -69,7 +69,7 @@
 
             <!-- Turmeric -->
             <div id="turmeric" class="model-container">
-                <model-viewer src="models/Turmeric.glb" alt="Turmeric" auto-rotate camera-controls></model-viewer>
+                <model-viewer src="Turmeric.glb" alt="Turmeric" auto-rotate camera-controls></model-viewer>
                 <div class="plant-info">
                     <h3>Turmeric (Curcuma longa)</h3>
                     <p><strong>Common Names:</strong> Haldi, Indian Saffron</p>
@@ -82,7 +82,7 @@
             </div>
             <!-- Cinnamon -->
             <div id="cinnamon" class="model-container">
-                <model-viewer src="models/Cinnamon.glb" alt="Cinnamon" auto-rotate camera-controls></model-viewer>
+                <model-viewer src="Cinnamon.glb" alt="Cinnamon" auto-rotate camera-controls></model-viewer>
                 <div class="plant-info">
                     <h3>Cinnamon (Cinnamomum verum)</h3>
                     <p><strong>Common Names:</strong> Ceylon Cinnamon, True Cinnamon</p>
@@ -96,7 +96,7 @@
 
             <!-- Cardamom -->
             <div id="cardamom" class="model-container">
-                <model-viewer src="models/Cardamom.glb" alt="Cardamom" auto-rotate camera-controls></model-viewer>
+                <model-viewer src="Cardamom.glb" alt="Cardamom" auto-rotate camera-controls></model-viewer>
                 <div class="plant-info">
                     <h3>Cardamom (Elettaria cardamomum)</h3>
                     <p><strong>Common Names:</strong> True Cardamom</p>
@@ -110,7 +110,7 @@
 
             <!-- Clove -->
             <div id="clove" class="model-container">
-                <model-viewer src="models/cloven.glb" alt="Clove" auto-rotate camera-controls></model-viewer>
+                <model-viewer src="cloven.glb" alt="Clove" auto-rotate camera-controls></model-viewer>
                 <div class="plant-info">
                     <h3>Clove (Syzygium aromaticum)</h3>
                     <p><strong>Common Names:</strong> Clove Buds</p>
