--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <!-- Clove -->
             <div id="clove" class="model-container">
-                <model-viewer src="cloven.glb" alt="Clove" auto-rotate camera-controls></model-viewer>
+                <model-viewer src="Cloven.glb" alt="Clove" auto-rotate camera-controls></model-viewer>
                 <div class="plant-info">
                     <h3>Clove (Syzygium aromaticum)</h3>
                     <p><strong>Common Names:</strong> Clove Buds</p>
