--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p><strong>Habitat:</strong> Native to India, commonly found in gardens.</p>
                     <p><strong>Medicinal Uses:</strong> Known for its anti-inflammatory, anti-viral, and antioxidant properties.</p>
                     <p><strong>Cultivation:</strong> Prefers warm climates and well-drained soil. Grows well in pots or garden beds.</p>
-                    <img src="images/Tulsi.jpg" alt="Tulsi Plant">
+                    <img src="Tulsi.jpg" alt="Tulsi Plant">
                     <br>
                     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4296439/" class="learn-more">Learn More</a>
                 </div>
@@ -62,7 +62,7 @@
                     <p><strong>Habitat:</strong> Native to India, grows well in arid regions.</p>
                     <p><strong>Medicinal Uses:</strong> Adaptogen, helps reduce stress and anxiety, boosts immunity.</p>
                     <p><strong>Cultivation:</strong> Prefers dry, well-drained soil and full sunlight.</p>
-                    <img src="images/Ashwagandha.jpeg" alt="Ashwagandha Plant">
+                    <img src="Ashwagandha.jpeg" alt="Ashwagandha Plant">
                     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3573577/" class="learn-more">Learn More</a>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                     <p><strong>Habitat:</strong> Native to Southeast Asia, requires a warm, humid climate.</p>
                     <p><strong>Medicinal Uses:</strong> Anti-inflammatory, antioxidant, used in digestive health.</p>
                     <p><strong>Cultivation:</strong> Grows in rich, well-drained soil with ample rainfall.</p>
-                    <img src="images/turmeric.jpg" alt="Turmeric Plant">
+                    <img src="turmeric.jpg" alt="Turmeric Plant">
                     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5664031/" class="learn-more">Learn More</a>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     <p><strong>Habitat:</strong> Native to Sri Lanka, thrives in tropical climates.</p>
                     <p><strong>Medicinal Uses:</strong> Helps regulate blood sugar levels, has anti-inflammatory properties.</p>
                     <p><strong>Cultivation:</strong> Prefers warm, humid environments with well-drained soil.</p>
-                    <img src="images/cinnamon.jpeg" alt="Cinnamon Plant">
+                    <img src="cinnamon.jpeg" alt="Cinnamon Plant">
                     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4003790/" class="learn-more">Learn More</a>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <p><strong>Habitat:</strong> Native to India, grows in tropical and subtropical climates.</p>
                     <p><strong>Medicinal Uses:</strong> Supports digestive health, has antimicrobial properties.</p>
                     <p><strong>Cultivation:</strong> Requires a moist, tropical climate and well-drained soil.</p>
-                    <img src="images/Cardamom.jpg" alt="Cardamom Plant">
+                    <img src="Cardamom.jpg" alt="Cardamom Plant">
                     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10346154/" class="learn-more">Learn More</a>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                     <p><strong>Habitat:</strong> Native to Indonesia, thrives in tropical climates.</p>
                     <p><strong>Medicinal Uses:</strong> Used for pain relief, has antibacterial and antioxidant properties.</p>
                     <p><strong>Cultivation:</strong> Prefers warm, humid conditions with rich, well-drained soil.</p>
-                    <img src="images/clove.jpg" alt="Clove Plant">
+                    <img src="clove.jpg" alt="Clove Plant">
                     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3074903/" class="learn-more">Learn More</a>
                 </div>
             </div>
