--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                onmouseover="this.style.backgroundColor='#66bb6a';" 
                onmouseout="this.style.backgroundColor='#008CBA';">View suggested herbal plants</a>
         </p>     
-        <p>&copy; Virtual Herbal Garden-(At 2k25-Hackathon By TID: T064)</p>
-        <p>Made by <a >Team Mad Developers</a></p>
+        <p>&copy; Virtual Herbal Garden</p>
+        <p>Made by <a ></a>Sathwik Madasi</p>
     </footer>
 
     <script>
@@ -196,3 +196,4 @@
     </script>
 </body>
 </html>
+
